{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 254,
  "lineage": "1bfcd552-999c-f69b-c3f7-6b089388dbec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041f617f43b10103a",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:elastic-ip/eipalloc-041f617f43b10103a",
            "domain": "vpc",
            "id": "eipalloc-041f617f43b10103a",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-150-217.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.150.217",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-nat-eip"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0850ab57897dcaa32",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-0cbbcc30b37ae80d9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbbcc30b37ae80d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-philip-syncstock-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-065dfa601d3bf8b77"
              }
            ],
            "primary_network_interface_id": "eni-065dfa601d3bf8b77",
            "private_dns": "ip-172-20-10-248.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.248",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0816bd305ed936496",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079a370c60237e0a7",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-app-server",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-app-server",
              "Tier": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078951c132139e8ba"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-0cbbcc30b37ae80d9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_nat_gateway.main",
            "aws_security_group.app",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0850ab57897dcaa32",
            "arn": "arn:aws:ec2:eu-west-2:226290659927:instance/i-0daf1b5963de7c323",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daf1b5963de7c323",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-philip-syncstock-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-043e4e349b427bd74"
              }
            ],
            "primary_network_interface_id": "eni-043e4e349b427bd74",
            "private_dns": "ip-172-20-0-212.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.0.212",
            "public_dns": "ec2-3-10-171-100.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.171.100",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ff654979f4757f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0805fc382a15572e8",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-web-server",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-web-server",
              "Tier": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02446c69fd58333f3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "i-0daf1b5963de7c323",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:internet-gateway/igw-004228c79fcf034b1",
            "id": "igw-004228c79fcf034b1",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-igw"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-igw"
            },
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041f617f43b10103a",
            "association_id": "eipassoc-005a795fb0f9ba0f9",
            "connectivity_type": "public",
            "id": "nat-0977e94d76531b408",
            "network_interface_id": "eni-0e9794bc9d99b7925",
            "private_ip": "172.20.0.160",
            "public_ip": "18.132.150.217",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0805fc382a15572e8",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-nat-gw"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-0f8cbcb7afc8d6f46",
            "id": "rtb-0f8cbcb7afc8d6f46",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0977e94d76531b408",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-rt"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-0f8cbcb7afc8d6f46",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:route-table/rtb-06586483963632af9",
            "id": "rtb-06586483963632af9",
            "owner_id": "226290659927",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004228c79fcf034b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-rt"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "rtb-06586483963632af9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbab77282b120925",
            "region": "eu-west-2",
            "route_table_id": "rtb-0f8cbcb7afc8d6f46",
            "subnet_id": "subnet-079a370c60237e0a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05937695992d42b8b",
            "region": "eu-west-2",
            "route_table_id": "rtb-0f8cbcb7afc8d6f46",
            "subnet_id": "subnet-079e8dfec2609647e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183eb85101381c8b",
            "region": "eu-west-2",
            "route_table_id": "rtb-06586483963632af9",
            "subnet_id": "subnet-0805fc382a15572e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b840418e5ef7ee",
            "region": "eu-west-2",
            "route_table_id": "rtb-06586483963632af9",
            "subnet_id": "subnet-0a4cb0bf8beccc9a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-078951c132139e8ba",
            "description": "Security group for app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078951c132139e8ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from web tier",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02446c69fd58333f3"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from web tier",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02446c69fd58333f3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-philip-syncstock-app-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-app-sg",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-app-sg",
              "Tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-078951c132139e8ba",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-07f9306ea13bbf3f2",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f9306ea13bbf3f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app tier",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078951c132139e8ba"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-philip-syncstock-db-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-db-sg",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-db-sg",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-07f9306ea13bbf3f2",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.web",
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:security-group/sg-02446c69fd58333f3",
            "description": "Security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02446c69fd58333f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "197.211.59.64/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-philip-syncstock-web-sg",
            "name_prefix": "",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-web-sg",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-web-sg",
              "Tier": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "sg-02446c69fd58333f3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-079a370c60237e0a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079a370c60237e0a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-079a370c60237e0a7",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-079e8dfec2609647e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e8dfec2609647e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-079e8dfec2609647e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-0805fc382a15572e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0805fc382a15572e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-0805fc382a15572e8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:subnet/subnet-0a4cb0bf8beccc9a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4cb0bf8beccc9a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226290659927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-033d566f98c3f8cb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "subnet-0a4cb0bf8beccc9a7",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:226290659927:vpc/vpc-033d566f98c3f8cb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0c7dbde60b25a23b5",
            "default_route_table_id": "rtb-05359d4030c887c7f",
            "default_security_group_id": "sg-0abf58be64b999806",
            "dhcp_options_id": "dopt-0c9b6880034d25e1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033d566f98c3f8cb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05359d4030c887c7f",
            "owner_id": "226290659927",
            "region": "eu-west-2",
            "tags": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-vpc",
              "Project": "terraform-environment-service"
            },
            "tags_all": {
              "Environment": "dev-philip-syncstock",
              "Name": "dev-philip-syncstock-vpc",
              "Project": "terraform-environment-service"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "226290659927",
            "id": "vpc-033d566f98c3f8cb2",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}